--- a/src/UI/Blazor/Modules/User/Components/Update-profile.razor
+++ b/src/UI/Blazor/Modules/User/Components/Update-profile.razor
@@ -84,7 +84,7 @@
         {
             if (response != null)
             {
-                navigationManager.NavigateTo("/");
+                navigationManager.NavigateTo("/dashboard");
             }
             else
             {
