--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -1,4 +1,4 @@
-﻿@page "/"
+﻿@page "/login"
 @using System.Text
 @using System.Text.Json
 @using Starter.Blazor.Core.AuthProviders
@@ -133,7 +133,7 @@
             await LocalStorage.SetItemAsync("authToken", response.Token);
             UserAuthId.SetUserId(response.Id);
             await AuthenticationStateProvider.GetAuthenticationStateAsync();
-            navigationManager.NavigateTo("/");
+            navigationManager.NavigateTo("/dashboard");
         }
         else
         {
