--- a/src/UI/Blazor/Modules/Dashboard/Components/Dashboard.razor
+++ b/src/UI/Blazor/Modules/Dashboard/Components/Dashboard.razor
@@ -309,7 +309,7 @@
         isAuthenticated = await AuthService.IsUserAuthenticated();
         if (!isAuthenticated)
         {
-            navigationManager.NavigateTo("/login");
+            navigationManager.NavigateTo("/");
         }
     }
 }
