--- a/src/UI/Blazor/Modules/User/Pages/UserRegister.razor
+++ b/src/UI/Blazor/Modules/User/Pages/UserRegister.razor
@@ -4,6 +4,7 @@
 @inject IUserService UserService
 @inject IJSRuntime JSRuntime
 @inject NavigationManager NavigationManager
+@layout Layout.Public.AuthLayout
 
 
 <div class="main-container min-h-screen text-black dark:text-white-dark">
@@ -16,16 +17,16 @@
                 <div class="flex space-x-4">
                     <div>
                         <label for="firstName">First Name</label>
-                        <input id="firstName" type="text" class="form-input" placeholder="Enter First Name" @bind="user.FirstName" readonly />
+                        <input id="firstName" type="text" class="form-input" placeholder="Enter First Name" @bind="user.FirstName" disabled />
                     </div>
                     <div>
                         <label for="lastName">Last Name</label>
-                        <input id="lastName" type="text" class="form-input" placeholder="Enter Last Name" @bind="user.LastName" readonly />
+                        <input id="lastName" type="text" class="form-input" placeholder="Enter Last Name" @bind="user.LastName" disabled />
                     </div>
                 </div>
                 <div>
                     <label for="email">Email</label>
-                    <input id="email" type="email" class="form-input" placeholder="Enter Email" @bind="user.Email" readonly />
+                    <input id="email" type="email" class="form-input" placeholder="Enter Email" @bind="user.Email" disabled />
                 </div>
                 <div>
                     <label for="password">Password</label>
@@ -77,7 +78,7 @@
         if (result.Success) 
         { 
             showToaster(result.Data, "top"); 
-            NavigationManager.NavigateTo("/login"); 
+            NavigationManager.NavigateTo("/"); 
             StateHasChanged(); 
         } 
         else 
