--- a/src/UI/Angular/src/app/core/layouts/header.html
+++ b/src/UI/Angular/src/app/core/layouts/header.html
@@ -188,7 +188,7 @@
         </a>
         }
       </div>
-      <div class="dropdown shrink-0">
+      <div class="dropdown shrink-0 d-none">
         <div hlMenu>
           <button
             type="button"
@@ -284,7 +284,7 @@
             </li>
             <li>
               <a
-                [routerLink]="routes.profile"
+                [routerLink]="profileRoute"
                 *hlMenuItem="let menuItem"
                 class="dark:hover:text-white"
               >
@@ -454,11 +454,13 @@
         </div>
       </a>
       <ul class="sub-menu">
+        @for (item of menuItems; track item) {
         <li>
-          <a [routerLink]="routes.users" routerLinkActive="active"
-            >{{ 'list_users' | translate }}</a
+          <a [routerLink]="item.link" routerLinkActive="active"
+            >{{ item.label| translate }}</a
           >
         </li>
+        }
       </ul>
     </li>
   </ul>
