--- a/src/UI/Angular/src/app/modules/user/components/change-password-modal/change-password-modal.component.html
+++ b/src/UI/Angular/src/app/modules/user/components/change-password-modal/change-password-modal.component.html
@@ -6,7 +6,7 @@
 >
   <ng-template #modalHeader> <div>Change Pasword</div> </ng-template>
   <ng-template #modalBody>
-    <form class="space-y-5" [formGroup]="formChangePassword" novalidate>
+    <form class="space-y-5" [formGroup]="formChangePassword" novalidate (keydown.enter)="submitFormChangePassword()">
       <div>
         <label for="password">Current Password</label>
         <app-input
