--- a/src/UI/Angular/src/app/modules/user/components/invite-user-modal/invite-user-modal.component.html
+++ b/src/UI/Angular/src/app/modules/user/components/invite-user-modal/invite-user-modal.component.html
@@ -6,7 +6,7 @@
 >
   <ng-template #modalHeader> <div>Invite User</div> </ng-template>
   <ng-template #modalBody>
-    <form class="space-y-5" [formGroup]="formInviteUser" novalidate>
+    <form class="space-y-5" [formGroup]="formInviteUser" novalidate (keydown.enter)="submitForm()">
       <div class="grid grid-cols-1 gap-5 md:grid-cols-2">
         <div>
           <label for="firstName">First Name</label>
