--- a/src/UI/Angular/src/app/shared/ui/date-range-picker/date-range-picker.component.html
+++ b/src/UI/Angular/src/app/shared/ui/date-range-picker/date-range-picker.component.html
@@ -1,25 +1,45 @@
-<div [ngClass]="isSubmit ? (Control.errors ? 'has-error' : '') : ''">
-  <input
-    type="text"
-    class="form-input"
-    mwlFlatpickr
-    [placeholder]="placeholder"
-    [monthSelectorType]="'dropdown'"
-    [dateFormat]="'m/d/y'"
-    [minDate]="minDate"
-    [convertModelValue]="true"
-    [(ngModel)]="rangeValue"
-    mode="range"
-    (flatpickrChange)="selectedDateRange($event.selectedDates)"
-    [ngClass]="classes"
-    id="dateInput"
-  />
-  @if (showClearButton) {
-    <button class="clear-x-btn btn-icon" (click)="clearAndEmit()">
-      <i class="i-x"></i>
-    </button>
-  }
-  @if (isSubmit && Control.errors?.["required"]) {
-    <p class="mt-1 text-danger">This can not be empty</p>
+<div class="group relative">
+  <div [ngClass]="isSubmit ? (Control.errors ? 'has-error' : '') : ''">
+    <input
+      type="text"
+      class="form-input"
+      mwlFlatpickr
+      [placeholder]="placeholder"
+      [monthSelectorType]="'dropdown'"
+      [dateFormat]="'m/d/y'"
+      [minDate]="minDate"
+      [convertModelValue]="true"
+      [(ngModel)]="rangeValue"
+      mode="range"
+      (flatpickrChange)="selectedDateRange($event.selectedDates)"
+      [ngClass]="classes"
+      id="dateInput"
+    />
+    @if (isSubmit && Control.errors?.["required"]) {
+      <p class="mt-1 text-danger">This can not be empty</p>
+    }
+  </div>
+  @if (rangeValue && rangeValue.to) {
+    <div
+      class="absolute top-1/2 -translate-y-1/2 peer-focus:text-primary ltr:right-[11px] rtl:left-[11px]"
+    >
+      <svg
+        style="cursor: pointer"
+        (click)="clearAndEmit()"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24px"
+        height="24px"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="1.5"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="h-5 w-5"
+      >
+        <line x1="18" y1="6" x2="6" y2="18"></line>
+        <line x1="6" y1="6" x2="18" y2="18"></line>
+      </svg>
+    </div>
   }
 </div>
