commit resusable grid local code

--- a/src/UI/Blazor/Modules/User/Pages/User.razor
+++ b/src/UI/Blazor/Modules/User/Pages/User.razor
@@ -85,7 +85,7 @@
    
     protected override async Task OnInitializedAsync()
     {
-        users = await UserService.GetUserlistsAsync(param);
+        users =  UserService.GetUserlistsAsync(param).Result.Data;
     }
 
     private async Task InviteUser()
