--- a/src/UI/Blazor/Shared/CustomGrid/TestReusablegrid.razor
+++ b/src/UI/Blazor/Shared/CustomGrid/TestReusablegrid.razor
@@ -3,20 +3,21 @@
 @using Starter.Blazor.Modules.Common
 @using Starter.Blazor.Modules.User.Models
 @using Starter.Blazor.Modules.User.Services
+@using Starter.Blazor.Shared.Response
 
 @inject IUserService UserService
 
-<ReusableGrid TItem="UserlistDto" GridData="@DisplayedData" HeaderData="@headerInfo" ParentAction="@ParentMethod" />
+<ReusableGrid TItem="UserlistDto" GridData="@DisplayedData.Data" HeaderData="@headerInfo" ParentAction="@ParentMethod" />
 
 
 @code {
     public Action ParentMethod { get; set; }
-    private List<UserlistDto> DisplayedData = new List<UserlistDto>();
+    private PagedDataResponse<List<UserlistDto>> DisplayedData = new PagedDataResponse<List<UserlistDto>>();
 
     protected override void OnInitialized()
     {
         // Define the action to be executed in the child component
-        ParentMethod = () =>
+        ParentMethod = async () =>
         {
             var paginationRequest = new PaginationRequest
                 {
@@ -24,13 +25,13 @@
                     PageNumber = 1
                 };
             // Logic to execute when called from child component
-            DisplayedData = UserService.GetUserlistsAsync(paginationRequest).Result;
+            DisplayedData = await UserService.GetUserlistsAsync(paginationRequest);
         };
     }
     private List<Dictionary<string, string>> headerInfo = new List<Dictionary<string, string>>
     {
         new Dictionary<string, string> {{"Name", "Full Name"}, {"Key","FullName"}, {"CssClass", ""}, {"ShowSorting", "true"}, {"SorderOrder","asc" }, {"ShowFilter", "true"}},
-        new Dictionary<string, string> {{"Name", "Email"}, { "Key","Email"}, { "CssClass", ""}, { "ShowSorting", "false"}, { "SorderOrder","asc" }, { "ShowFilter", "false"}},
+        new Dictionary<string, string> { { "Name", "Email" }, { "Key", "Email" }, { "CssClass", "" }, { "ShowSorting", "false" }, { "SorderOrder", "asc" }, { "ShowFilter", "false" } },
         new Dictionary<string, string> { { "Name", "Status" }, { "Key", "Status" }, { "CssClass", "" }, { "ShowSorting", "false" }, { "SorderOrder", "asc" }, { "ShowFilter", "false" } },
         new Dictionary<string, string> { { "Name", "Role" }, { "Key", "Role" }, { "CssClass", "" }, { "ShowSorting", "false" }, { "SorderOrder", "asc" }, { "ShowFilter", "false" } }
     };
