--- a/src/UI/Blazor/Shared/CustomGrid/ReusableGrid.razor
+++ b/src/UI/Blazor/Shared/CustomGrid/ReusableGrid.razor
@@ -44,7 +44,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    @foreach (var item in GridData)
+                    @foreach (var item in (List<TItem>)GridData)
                     {
                         <tr>
                             @foreach (var headerKey in HeaderData)
