--- a/src/UI/Angular/src/app/modules/project/pages/list-projects/list-projects.component.html
+++ b/src/UI/Angular/src/app/modules/project/pages/list-projects/list-projects.component.html
@@ -1,20 +1,35 @@
 <div class="panel mt-6 pb-0">
-  <div class="mb-5 flex flex-col gap-5 md:flex-row md:items-center">
+  <div class="mb-5 flex flex-wrap items-center justify-between gap-4">
     <h5 class="text-lg font-semibold dark:text-white-light">Projects</h5>
-
-    <div class="flex items-center gap-5 ltr:ml-auto rtl:mr-auto">
-      Filter By:
-      <app-dropdown
-        text="Project Name"
-        [cols]="filterDropdownDs"
-        (selectedValue)="selectFilterDropdown($event)"
-      ></app-dropdown>
-      <div class="group relative" style="width: 200px">
+    <div
+      class="flex w-full flex-col gap-4 sm:w-auto sm:flex-row sm:items-center sm:gap-3"
+    >
+      <div class="flex items-center gap-3">
+        <app-button
+          text="Create"
+          type="button"
+          classes="btn-outline-primary btn-sm w-full"
+          class="d-block"
+          (click)="openCreateProjectModal()"
+        ></app-button>
+      </div>
+      <div class="flex items-center gap-3">
+        <div>Search By:</div>
+        <div>
+          <app-dropdown
+            text="Project Name"
+            [cols]="filterDropdownDs"
+            (selectedValue)="selectFilterDropdown($event)"
+          ></app-dropdown>
+        </div>
+      </div>
+      <div class="relative ng-tns-c40-36">
         @if (searchBoxType == "date") {
           <app-date-range-picker
             [placeholder]="'Search'"
             (onSelect)="dateRangeSelect($event)"
             (onClear)="dateRangeclear()"
+            [classes]="'ltr:pr-8 rtl:pl-8'"
             [rangeValue]="searchDates"
           ></app-date-range-picker>
         } @else {
@@ -50,13 +65,6 @@
           }
         }
       </div>
-      <app-button
-        text="Create"
-        type="button"
-        classes="btn-outline-primary btn-sm w-full"
-        class="d-block"
-        (click)="openCreateProjectModal()"
-      ></app-button>
     </div>
   </div>
 
