--- a/src/UI/Blazor/Modules/Projects/Components/Project.razor
+++ b/src/UI/Blazor/Modules/Projects/Components/Project.razor
@@ -1,5 +1,54 @@
-﻿<h3>Project</h3>
+﻿@page "/projectlist"
+@using Starter.Blazor.Modules.Common
+@using Starter.Blazor.Modules.Projects.Models
+@using Starter.Blazor.Modules.Projects.Services
+@inject IProjectService ProjectService
+
+<div class="panel h-full w-full">
+    <div class="mb-5 flex items-center justify-between">
+        <h5 class="text-lg font-semibold dark:text-white-light">Projects</h5>
+
+        <button type="button" class="btn btn-primary" @click="toggle">Add Project</button>
+
+    </div>
+    <div class="table-responsive">
+        <table>
+            <thead>
+                <tr>
+                    <th class="ltr:rounded-l-md rtl:rounded-r-md">Name</th>
+                    <th>Description</th>
+                    <th>Start Date</th>
+                    <th>End Date</th>
+                    <th>Hours</th>
+                    <th class="ltr:rounded-r-md rtl:rounded-l-md">Action</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var project in projects)
+                {
+                    <tr class="group text-white-dark hover:text-black dark:hover:text-white-light/90">
+                        <td class="min-w-[150px] text-black dark:text-white">
+                           @project.ProjectName
+                        </td>
+                        <td class="text-dark">@project.Description</td>
+                        <td class="text-dark">@project.StartDateDisplay</td>
+                        <td class="text-dark">@project.EndDateDisplay</td>
+                        <td class="text-dark">@project.EstimatedHours</td>
+                        <td>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
 
 @code {
+    private List<ProjectDto> projects = new List<ProjectDto>();
+    private PaginationRequest param = new PaginationRequest { PageNumber = 0, PageSize = 10, OrderBy = new[] { "projectName" } };
 
+    protected override async Task OnInitializedAsync()
+    {
+        projects = await ProjectService.GetProjectlistsAsync(param);
+    }
 }
