--- a/src/UI/Blazor/Layout/Public/Header.razor
+++ b/src/UI/Blazor/Layout/Public/Header.razor
@@ -279,7 +279,7 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a href="/">Dashboard</a>
+                        <a href="/dashboard">Dashboard</a>
                     </li>
                     <li>
                         <a href="/todolist">Todo List</a>
