--- a/src/UI/Blazor/_Imports.razor
+++ b/src/UI/Blazor/_Imports.razor
@@ -12,3 +12,6 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Blazored.LocalStorage
 @using Starter.Blazor.Modules.User.Models
+@using Blazored
+@using Blazored.Modal
+@using Blazored.Modal.Services
