--- a/src/UI/Blazor/Modules/Login/Components/Login.razor
+++ b/src/UI/Blazor/Modules/Login/Components/Login.razor
@@ -1,6 +1,7 @@
 ﻿@page "/"
 @using System.Text
 @using System.Text.Json
+@using Starter.Blazor.Core
 @using Starter.Blazor.Core.AuthProviders
 @using Starter.Blazor.Modules.Login.Services
 @layout Layout.Public.AuthLayout
